--- a/style/style.scss
+++ b/style/style.scss
@@ -787,7 +787,7 @@ body {
 
     .main {
         &__item {
-            margin: 0 0 68px;
+            margin: 0 32px 68px;
         }
 
         &__title {
