--- a/style/style.css
+++ b/style/style.css
@@ -758,7 +758,7 @@ body {
     background-color: #648CF3;
   }
   .main__item {
-    margin: 0 0 68px;
+    margin: 0 32px 68px;
   }
   .main__title {
     margin: 0;
